[tool.poetry]
name = "visucirco"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <4.0"
pandas = "^1.4.1"
gdal = {path = "winlib/GDAL-3.4.1-cp310-cp310-win_amd64.whl", platform = "win32"}
fiona = {path = "winlib/Fiona-1.8.21-cp310-cp310-win_amd64.whl", platform = "win32"}
geopandas = "^0.10.2"
streamlit = "^1.7.0"
leafmap = "^0.8.4"
bokeh = "^2.4.2"
pandas-bokeh = "^0.5.5"



[tool.poetry.dev-dependencies]
ipython = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
